--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
 .App {
-  text-align: center;
+  max-height: 100vh;
+  width: 100%;
+  overflow-y: hidden;
+  background-color: #f2f2f2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+  display: flex;
+  height: calc(100vh - 50px);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.left-container {
+  position: relative;
+  flex: 60%;
+  height: calc(100vh - 50px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.right-container {
+  flex: 40%;
+  height: calc(100vh - 50px);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  background-color: #e6e6e6;
+  border-left: 3px solid #ff6600;
+  padding: 5px;
+}
+
+.input-box {
+  flex: 50%;
+}
+
+.input-box textarea {
+  font-size: 16px;
+  color: #333333;
+}
+
+.spinner-box {
+  flex: 50%;
+  background-color: #e6e6e6;
+  overflow-y: auto;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.spinner-box img {
+  width: 200px;
+}
+
+.output-box {
+  flex: 50%;
+  background-color: #e6e6e6;
+  overflow-y: auto;
+  color: #333333;
+  position: relative;
+}
+
+.clear-btn {
+  position: absolute;
+  bottom: 14px;
+  right: 18px;
+  width: 80px;
+  height: 40px;
+  font-size: 22px;
+  font-weight: bold;
   color: white;
+  background-color: #ff6600;
+  border: none;
+  border-radius: 4px;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.output-box pre {
+  font-size: 15px;
+  white-space: pre-wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4 {
+  color: #ff6600;
+}
+
+#code-inp {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  resize: none;
+  background-color: #e6e6e6;
+  color: #333333;
+  padding: 5px;
+}
+
+#code-inp:focus {
+  outline: none;
+}
+
+.run-btn {
+  position: absolute;
+  bottom: 10px;
+  right: 18px;
+  width: 80px;
+  height: 40px;
+  font-size: 22px;
+  font-weight: bold;
+  background-color: #ff6600;
+  border: none;
+  border-radius: 4px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.run-btn:active {
+  background-color: #cc5500;
 }
